# Desk-Controller

./: README.md
Desk-Controller/: CMakeLists.txt  DeskController.qmlproject  Main.qml  Setup.qml  SideBar.qml  SystemMonitor.qml  SystemMonitorModule.qml  main.cpp  main.qml  qmlmodules  qtquickcontrols2.conf
Desk-Controller/common/: CMakeLists.txt  Constants.qml
Desk-Controller/content/: App.qml  AppMenu.qml  AppPage.qml  Bars.qml  CMakeLists.txt  ConnectDialog.qml  Footer.qml  HomePage.qml  MainView.qml  MonitorStatusWidget.qml  MonitorView.qml  PCMonitor.qml  PCMonitorWidget.qml  RoomMonitor.qml  RpiMonitorStatusWidget.qml  RpiMonitorWidget.qml  SideBar.qml  TopToolBar.qml
Desk-Controller/imports/: CMakeLists.txt
Desk-Controller/imports/DeskController/: CMakeLists.txt  Constants.qml  qmldir
Desk-Controller/lib/: CMakeLists.txt
Desk-Controller/lib/include/: Application.hpp  Backend.hpp  PCMonitor.hpp  RpiMonitor.hpp  TcpClient.hpp  TcpServer.hpp
Desk-Controller/lib/src/: Application.cpp  Backend.cpp  PCMonitor.cpp  RpiMonitor.cpp  TcpClient.cpp  TcpServer.cpp
Desk-Controller/setup/: ConnectionInfo.qml  ConnectionInfoPanel.qml  DisplaySettings.qml  NewConnectionDialog.qml
Desk-Controller/src/: app_environment.h  import_qml_plugins.h  main.cpp
Desk-Controller/systemMonitor/: SystemMonitorPanel.qml
Desktop/Desk-Controller/: CMakeLists.txt  Main.qml  main.cpp
Desktop/Desk-Controller/lib/include/: Backend.hpp
Old-UI/: CMakeLists.txt  Module.qml  SideBar.qml
Old-UI/components/: Panel.qml
Old-UI/lib/include/: Backend.hpp
Old-UI/lib/src/: Backend.cpp
Old-UI/setup/: NewConnectionDialog.qml
Old-UI/systemMonitor/: SystemMonitorPanel.qml
diagrams/: Desk-Controller-v0.0.1.puml
tools/: TestTcpServer.py
